add some features

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           <h1 class="w3-xxxlarge w3-text-red"><b>Capturing Moments, Creating Memories.</b></h1>
           <h1 class="w3-xxxlarge w3-text-red"><b>Showcase.</b></h1>
           <hr style="width:50px;border:5px solid rgb(255, 0, 0)" class="w3-round">
-          <p h5 class="w3-center w3-padding-64"><span class="w3 w3-wide">welcomes you to Kuvakantele, where each click tells a unique story. Our passion for photography goes beyond the lens – it's about freezing moments in time, 
+          <p class="w3-center w3-padding-64"><span class="w3 w3-wide">welcomes you to Kuvakantele, where each click tells a unique story. Our passion for photography goes beyond the lens – it's about freezing moments in time, 
             weaving emotions into pixels, and creating a visual symphony that resonates with your soul.</span></p>
         </div>
         <div class="w3-row ">
@@ -145,7 +145,19 @@
       <a href="#" class="w3-bar-item w3-button w3-hover-black">»</a>
     </div>
   </div>
-  <hr class="w3-black">
+  <hr id="about">
+
+  <!-- About Section -->
+  <div class="w3-container w3-padding-32 w3-center">  
+    <h3><b>About Us</b></h3><br>
+    <div class="w3-padding-">
+      <h4><b>Our Story</b></h4>
+      <p class="w3-center w3-padding-64"><span class="w3 w3-wide">Kuvakantele Photography was born from a deep love for the art of capturing moments. Founded by Eliyas k., our team is driven by creativity, passion, and a commitment to delivering stunning visuals that leave a lasting impression.</span></p>
+      <img src="./kuva/Snapchat-1700458993 (1).jpg" alt="Me" >
+      
+    </div>
+  </div>
+  <hr>
         <!-- Photo grid (modal) -->
         <div class="w3-row-padding">
           <div class="w3-half">
