--- a/index.html
+++ b/index.html
@@ -36,10 +36,11 @@
    
        <div class="col-3 col-s-3 menu">
          <ul>
-          <li><a href="index.html">Etusivu</a></li>
-          <li><a href="sivu1.html"> River</a></li>
-          <li><a href="sivu2.html">Forest</a></li>
-          <li><a href="sivu3.html">City</a></li>
+          <li><a href="#portfolio" onclick="w3_close()" class="w3-bar-item w3-button w3-padding w3-text-teal"><i class="fa fa-th-large fa-fw w3-margin-right"></i>Etusivu</a></li>
+          <li><a href="#about" onclick="w3_close()" ><i class="fa fa-user fa-fw w3-margin-right"></i>About</a></li>
+          <li><a href="#packages" onclick="w3_close()" ><i class="fa fa-suitcase fa-fw w3-margin-right"></i>Packages</a></li>
+
+          <li><a href="#contact" onclick="w3_close()"><i class="fa fa-envelope fa-fw w3-margin-right"></i>Contact</a></li>
          </ul>
          <div class="aside">
             <h2> Otsikko 1 </h2>
