--- a/index.html
+++ b/index.html
@@ -29,7 +29,11 @@
 </head>
 <body>
     <div class="header">
-        <h1>KuvaKantele Photography</h1>
+      <svg xmlns="http://www.w3.org/2000/svg" width="102" height="102" fill="currentColor" class="bi bi-camera" viewBox="0 0 16 16">
+        <path d="M15 12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V6a1 1 0 0 1 1-1h1.172a3 3 0 0 0 2.12-.879l.83-.828A1 1 0 0 1 6.827 3h2.344a1 1 0 0 1 .707.293l.828.828A3 3 0 0 0 12.828 5H14a1 1 0 0 1 1 1zM2 4a2 2 0 0 0-2 2v6a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V6a2 2 0 0 0-2-2h-1.172a2 2 0 0 1-1.414-.586l-.828-.828A2 2 0 0 0 9.172 2H6.828a2 2 0 0 0-1.414.586l-.828.828A2 2 0 0 1 3.172 4z"/>
+        <path d="M8 11a2.5 2.5 0 1 1 0-5 2.5 2.5 0 0 1 0 5m0 1a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7M3 6.5a.5.5 0 1 1-1 0 .5.5 0 0 1 1 0"/>
+      </svg>
+        <h1><b>KuvaKantele Photography</b></h1>
       </div>
    
       <div class="row">
@@ -65,8 +69,7 @@
                     <h2 class="fs-5 fw-bold mb-3">Jos sinulla ei ole tiliä, paina Sign up</h2>
                   </form>
                   <form action="signup.php" method="post">
-                    <button class="w-100 py-2 mb-2 btn btn-outline-primary rounded-3" type="submit" fdprocessedid="e7wrx4">
-                      
+                    <button class="w-100 py-2 mb-2 btn btn-lg btn-outline-primary rounded-3" type="submit" fdprocessedid="e7wrx4">
                       Sign up
                     </button>
                   </form>
