--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
     .w3-half img:hover{opacity:1}
     .image-container {
       position: relative;
-      height: 400px; /* Set your desired height */
+      height: 400px; 
       overflow: hidden;
     }
 
   .image-container img {
     width: 100%;
     height: 100%;
-    object-fit: cover; /* Adjust as needed, 'cover' will crop the image if necessary */
+    object-fit: cover; 
   }
   </style>
 </head>
@@ -41,7 +41,7 @@
    
        <div class="col-3 col-s-3 menu">
          <ul>
-          <li><a href="#portfolio" onclick="w3_close()" class="w3-bar-item w3-button w3-padding w3-text-teal"><i class="fa fa-th-large fa-fw w3-margin-right"></i>Etusivu</a></li>
+          <li><a href="#home" onclick="w3_close()" ><i class="fa fa-th-large fa-fw w3-margin-right"></i>Etusivu</a></li>
           <li><a href="#about" onclick="w3_close()" ><i class="fa fa-user fa-fw w3-margin-right"></i>About</a></li>
           <li><a href="#packages" onclick="w3_close()" ><i class="fa fa-suitcase fa-fw w3-margin-right"></i>Packages</a></li>
 
@@ -68,7 +68,7 @@
                     <hr class="my-4">
                     <h2 class="fs-5 fw-bold mb-3">Jos sinulla ei ole tiliä, paina Sign up</h2>
                   </form>
-                  <form action="signup.php" method="post">
+                  <form action="signup.html">
                     <button class="w-100 py-2 mb-2 btn btn-lg btn-outline-primary rounded-3" type="submit" fdprocessedid="e7wrx4">
                       Sign up
                     </button>
@@ -82,10 +82,10 @@
    
        <div class="col-9 col-s-9">
         <div class="w3-container" style="margin-top:80px" id="showcase">
-          <h3 class="w3-jumbo"><b>Kuvakantele Photography!</b></h3>
-          <h1 class="w3-xxxlarge w3-text-red"><b>Capturing Moments, Creating Memories.</b></h1>
-          <h1 class="w3-xxxlarge w3-text-red"><b>Showcase.</b></h1>
-          <hr style="width:50px;border:5px solid rgb(255, 0, 0)" class="w3-round">
+          <h1 class="w3-jumbo w3-center"><b>Kuvakantele Photography!</b></h3>
+          <h3 class="w3-xxxlarge w3-text-red w3-center"><b>Capturing Moments, Creating Memories.</b></h3>
+         
+          <hr style="width:50px;border:5px solid rgb(255, 0, 0)" class="w3-round w3-center">
           <p class="w3-center w3-padding-64"><span class="w3 w3-wide">welcomes you to Kuvakantele, where each click tells a unique story. Our passion for photography goes beyond the lens – it's about freezing moments in time, 
             weaving emotions into pixels, and creating a visual symphony that resonates with your soul.</span></p>
         </div>
@@ -102,7 +102,7 @@
           </div>
         </div>
         
-        <p>Ripped Skinny Jeans<br><b>$24.99</b></p>
+        <p>Lorem Ipsum<br><b>$24.99</b></p>
       </div>
       <div class="w3-container">
         <div class="image-container"><img src="./kuva/IMG20230503135440.jpg" onclick="onClick(this)"></div>
